<resources>
    <string name="app_name">Widget</string>
    <string name="setting">设置</string>
    <string name="permission_storage_rationale">允许该权限可以让你下载萌否的歌曲资源</string>
    <string name="permission_storage_rationale_again">拒绝改该权限你将不能下载任何歌曲，想要恢复请去设置中心打开权限</string>
    <string name="permission_storage_denied">你没有权限下载歌曲,请前往设置中心打开权限</string>
    <string name="permission_record_rationale">允许该权限可以给你炫酷的播放特效</string>
    <string name="permission_record_rationale_again">拒绝改该权限你将无法看到炫酷的播放特效</string>
    <string name="permission_record_denied">你已拒绝该权限,请前往设置中心打开权限</string>
    <string name="action_fragment">Fragment</string>
    <string name="permission_explain">你已拒绝访问%1$s权限,请前往设置中心打开权限</string>
    <string name="per_setting">设置</string>
    <string name="per_cancle">取消</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Room">房间</string>
    <string name="Automation">自动化</string>
    <string name="Scene">场景</string>
    <string name="Home">首页</string>
    <string name="pull_down_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">载入中…</string>
    <string name="refreshing_no_point">载入中</string>
    <string name="refreshing_retry">加载失败，重试？</string>
    <string name="ok_button">确定</string>
    <string name="know_button">我知道了</string>
    <string name="ignore">忽略</string>
    <string name="cancel">取消</string>
    <string name="setting_title">设置</string>
    <string name="picker_hour">时</string>
    <string name="picker_minite">分</string>
    <string name="picker_year">年</string>
    <string name="picker_month">月</string>
    <string name="picker_day">日</string>
    <string name="progress_dialog_already">已完成</string>
    <string name="title_activity_ltlink">SmartLink</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="wifi_pass">WIFI PASS:</string>
    <string name="wifi">WIFI:</string>
    <string name="PeiZhi">配置</string>
    <string name="hide_text">HIDE</string>
    <string name="show_text">SHOW</string>
    <string name="Network_instability">当前网络有点不稳定噢，请重新加载</string>
    <string name="Reload">重新加载</string>
    <string name="nomessage">暂无任何消息</string>
    <string name="connecting_network">正在连接中...</string>
    <string name="PARAM_NETIO_ERROR">网络IO错误</string>
    <string name="PARAM_VALID_ERROR">请求数据字段验证不通过</string>
    <string name="PARAM_MUST_NOT_NULL">请求数据必须字段不可为空</string>
    <string name="PHONE_VERIFYCODE_NOT_EXISTS">手机验证码不存在</string>
    <string name="PHONE_VERIFYCODE_ERROR">手机验证码错误</string>
    <string name="REGISTER_PHONE_EXISTS">注册的手机号已存在</string>
    <string name="REGISTER_EMAIL_EXISTS">注册的邮箱已存在</string>
    <string name="LOGIN_CONTINUOUS">密码登录多次失败</string>
    <string name="REGISTER_EMAIL_USUE_EXISTS">注册的邮箱已存在</string>
    <string name="REGISTER_PHONE_USUE_EXISTS">注册的手机已存在</string>
    <string name="ACCOUNT_PASSWORD_ERROR">密码错误</string>
    <string name="ACCOUNT_VAILD_ERROR">帐号不合法</string>
    <string name="MEMBER_STATUS_ERROR">企业成员状态不合法</string>
    <string name="REFRESH_TOKEN_ERROR">刷新token不合法</string>
    <string name="MEMBER_ROLE_TYPE_UNKOWN">未知成员角色类型</string>
    <string name="MEMBER_INVITE_NOT_ADMIN">只有管理员才能邀请</string>
    <string name="CAN_NOT_MODIFY_OTHER_MEMBER_INFO">不可修改其他成员信息</string>
    <string name="CAN_NOT_DELETE_YOURSELF">不能删除本人</string>
    <string name="PRODUCT_LINK_TYPE_UNKOWN">未知的产品连接类型</string>
    <string name="CAN_NOT_DELETE_RELEASE_PRODUCT">已发布的产品不可删除</string>
    <string name="FIRMWARE_VERSION_EXISTS">固件版本已存在</string>
    <string name="DATAPOINT_TYPE_UNKOWN">数据端点未知数据类型</string>
    <string name="DATAPOINT_INDEX_EXISTS">数据端点索引已存在</string>
    <string name="CANT_NOT_DELETE_RELEASED_DATAPOINT">已发布的数据端点不可删除</string>
    <string name="DEVICE_MAC_ADDRESS_EXISTS">该产品下设备MAC地址已存在</string>
    <string name="CAN_NOT_DELETE_ACTIVATED_DEVICE">不能删除已激活的设备</string>
    <string name="PROPERTY_KEY_PROTECT">扩展属性Key为预留字段</string>
    <string name="PROPERTY_LIMIT">设备扩展属性超过上限</string>
    <string name="PROPERTY_ADD_EXISTS">新增已存在的扩展属性</string>
    <string name="PROPERTY_UPDATE_NOT_EXISTS">更新不存在的扩展属性</string>
    <string name="PROPERTY_KEY_ERROR">属性字段名不合法</string>
    <string name="EMAIL_VERIFYCODE_NOT_EXISTS">邮件验证码不存在</string>
    <string name="EMAIL_VERIFYCODE_ERROR">邮件验证码错误</string>
    <string name="USER_STATUS_ERROR">用户状态不合法</string>
    <string name="USER_PHONE_NOT_VAILD">用户手机尚未认证</string>
    <string name="USER_EMAIL_NOT_VAILD">用户邮箱尚未认证</string>
    <string name="USER_HAS_SUBSCRIBE_DEVICE">用户已经订阅设备</string>
    <string name="USER_HAVE_NO_SUBSCRIBE_DEVICE">用户没有订阅该设备</string>
    <string name="UPGRADE_TASK_NAME_EXISTS">自动升级任务名称已存在</string>
    <string name="UPGRADE_TASK_STATUS_UNKOWN">升级任务状态未知</string>
    <string name="UPGRADE_TASK_HAVE_STARTING_VERSION">已有相同的起始版本升级任务</string>
    <string name="DEVICE_ACTIVE_FAIL">设备激活失败</string>
    <string name="DEVICE_AUTH_FAIL">设备认证失败</string>
    <string name="SUBSCRIBE_AUTHORIZE_CODE_ERROR">订阅设备认证码错误</string>
    <string name="EMPOWER_NAME_EXISTS">授权名称已存在</string>
    <string name="ALARM_RULE_NAME_EXISTS">该告警规则名称已存在</string>
    <string name="DATA_TABLE_NAME_EXISTS">数据变名称已存在</string>
    <string name="PRODUCT_FIRMWARE_FILE_SIZE_LIMIT">产品固件文件超过大小限制</string>
    <string name="APP_APN_LICENSE_FILE_SIZE_LIMIT">apn密钥文件超过大小限制</string>
    <string name="APP_APN_IS_NOT_ENABLE">APP的APN功能未启用</string>
    <string name="PRODUCT_CAN_NOT_REGISTER_DEVICE">产品未允许用户注册设备</string>
    <string name="INVALID_ACCESS">禁止访问</string>
    <string name="NEED_ACCESS_TOKEN">禁止访问，需要Access-Token</string>
    <string name="ACCESS_TOKEN_INVALID">无效的Access-Token</string>
    <string name="NEED_CORP_API">需要企业的调用权限</string>
    <string name="NEED_CORP_ADMIN_MEMBER">需要企业管理员权限</string>
    <string name="NEED_DATA_PERMISSION">需要数据操作权限</string>
    <string name="INVAILD_ACCESS_PRIVATE_DATA">禁止访问私有数据</string>
    <string name="SHARE_CANCELED">分享已经被取消</string>
    <string name="SHARE_ACCEPTED">分享已经接受</string>
    <string name="URL_NOT_FOUND">URL找不到</string>
    <string name="MEMBER_ACCOUNT_NO_EXISTS">企业成员帐号不存在</string>
    <string name="MEMBER_NOT_EXISTS">企业成员不存在</string>
    <string name="MEMBER_INVITE_EMAIL_NOT_EXISTS">激活的成员邮箱不存在</string>
    <string name="PRODUCT_NOT_EXISTS">产品信息不存在</string>
    <string name="FIRMWARE_NOT_EXISTS">产品固件不存在</string>
    <string name="DATAPOINT_NOT_EXISTS">数据端点不存在</string>
    <string name="DEVICE_NOT_EXISTS">设备不存在</string>
    <string name="DEVICE_PROPERTY_NOT_EXISTS">设备扩展属性不存在</string>
    <string name="CORP_NOT_EXISTS">企业不存在</string>
    <string name="USER_NOT_EXISTS">用户不存在</string>
    <string name="USER_PROPERTY_NOT_EXISTS">用户扩展属性不存在</string>
    <string name="UPGRADE_TASK_NOT_EXISTS">升级任务不存在</string>
    <string name="EMPOWER_NOT_EXISTS">第三方身份授权不存在</string>
    <string name="ALARM_RULE_NOT_EXISTS">告警规则不存在</string>
    <string name="DATA_TABLE_NOT_EXISTS">数据表不存在</string>
    <string name="DATA_NOT_EXISTS">数据不存在</string>
    <string name="SHARE_NOT_EXISTS">分享资源不存在</string>
    <string name="CORP_EMAIL_NOT_EXISTS">企业邮箱不存在</string>
    <string name="APP_NOT_EXISTS">APP不存在</string>
    <string name="NOT_A_DEVICE_ADMIN">不是设备管理者</string>
    <string name="SERVICE_EXCEPTION">服务端发生异常</string>
    <string name="OTHER_ER">其他异常错误</string>
    <string name="Logins">登录中...</string>
    <string name="user_nikename">User NikeName</string>
    <string name="email">Email</string>
    <string name="MyDevice">我的设备</string>
    <string name="MyScene">我的场景</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Alarm">Alarm</string>
    <string name="Clear">Clear</string>
    <string name="OutAway">Away</string>
    <string name="Disarm">Disarm</string>
    <string name="PFUF">Power Off | USB Off</string>
    <string name="PFUN">Power Off | USB On</string>
    <string name="PNUF">Power On | USB Off</string>
    <string name="PNUN">Power On | USB On</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="gateway_device">设备</string>
    <string name="gateway_disarm">撤防</string>
    <string name="gateway_away">外出布防</string>
    <string name="gateway_at_home">在家布防</string>
    <string name="home_automation">首页|自动化</string>
    <string name="add_sub_device">添加子设备</string>
    <string name="Automated_diary">自动化日记</string>
    <string name="more">更多</string>
    <string name="Novice_guide">新手指引</string>
    <string name="Common_problem">常见问题</string>
    <string name="Product_manual">产品手册</string>
    <string name="Owned_room">所属房间</string>
    <string name="Modify_name">修改名称</string>
    <string name="Device_sharing">设备分享</string>
    <string name="Check_firmware_upgrade">检查固件升级</string>
    <string name="Delete_device">删除设备</string>
    <string name="Edat">编辑</string>
    <string name="My_room">我的房间</string>
    <string name="room_name">房间名称</string>
    <string name="Room_wallpaper">房间墙纸</string>
    <string name="Photograph">拍照</string>
    <string name="Select_existing_wallpaper">选取现有墙纸</string>
    <string name="Unallocated_room_equipment">未分配房间设备</string>
    <string name="Save">保存</string>
    <string name="Create_room">创建房间</string>
    <string name="Edit_room">编辑房间</string>
    <string name="txt_gender_male">男</string>
    <string name="txt_gender_female">女</string>
    <string name="btn_confirm2">确定</string>
    <string name="btn_cancel2">取消</string>
    <string name="btn_phone_takephoto">手机拍照</string>
    <string name="btn_local_photo">本地相片</string>
    <string name="txt_gender_select">性别选择</string>
    <string name="input_old_pwd">请输入旧密码：</string>
    <string name="edit_hit_old_pwd">请输入旧密码</string>
    <string name="edit_hit_new_pwd">请输入新密码</string>
    <string name="input_new_pwd">请输入新密码：</string>
    <string name="input_new_pwd_next_time">再次输入新密码：</string>
    <string name="btn_complete">完成</string>
    <string name="txt_check_app_version">检查APP版本更新</string>
    <string name="txt_use_policy">使用条款和隐私政策</string>
    <string name="txt_app_version">当前APP版本号：</string>
    <string name="txt_copyright">Copyright@深圳市海曼科技有限公司</string>
    <string name="input_phone_num">请输入手机号</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="support_only_chinese_phone">仅支持中国大陆手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_next_time">请再次输入密码</string>
    <string name="btn_regist">注&#12288;&#12288;册</string>
    <string name="txt_use_email_regist">使用邮箱注册</string>
    <string name="txt_get_verification_code">获取验证码</string>
    <string name="input_email_address">请输入邮箱号</string>
    <string name="regist_use_phone">使用手机注册</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
</resources>