<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/exit_account_dialog_bg"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/cbx_monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="@drawable/common_check_icon"
        android:padding="10dp"
        android:text="@string/Monday"
        android:textColor="@color/txt_color"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/navigation_bar_parting_line_color" />

    <CheckBox
        android:id="@+id/cbx_tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="@drawable/common_check_icon"
        android:padding="10dp"
        android:text="@string/Tuesday"
        android:textColor="@color/txt_color"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/navigation_bar_parting_line_color" />

    <CheckBox
        android:id="@+id/cbx_wednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="@drawable/common_check_icon"
        android:padding="10dp"
        android:text="@string/Wednesday"
        android:textColor="@color/txt_color"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/navigation_bar_parting_line_color" />

    <CheckBox
        android:id="@+id/cbx_thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="@drawable/common_check_icon"
        android:padding="10dp"
        android:text="@string/Thursday"
        android:textColor="@color/txt_color"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/navigation_bar_parting_line_color" />

    <CheckBox
        android:id="@+id/cbx_friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="@drawable/common_check_icon"
        android:padding="10dp"
        android:text="@string/Friday"
        android:textColor="@color/txt_color"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/navigation_bar_parting_line_color" />

    <CheckBox
        android:id="@+id/cbx_saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="@drawable/common_check_icon"
        android:padding="10dp"
        android:text="@string/Saturday"
        android:textColor="@color/txt_color"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/navigation_bar_parting_line_color" />

    <CheckBox
        android:id="@+id/cbx_sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="@drawable/common_check_icon"
        android:padding="10dp"
        android:text="@string/Sunday"
        android:textColor="@color/txt_color"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/navigation_bar_parting_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:background="@drawable/btn_left_bg"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/btn_cancel2"
            />
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/navigation_bar_parting_line_color"
            />
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:background="@drawable/btn_right_bg"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/btn_confirm2"
            />
    </LinearLayout>

</LinearLayout>
