<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/navigation_bar_parting_line_color"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/txt_color"
        android:textSize="12sp"
        android:text="@string/input_old_pwd"
        />

    <com.heiman.widget.edittext.PasswordEditText
        android:id="@+id/edit_old_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:inputType="textPassword"
        android:background="@drawable/common_input_bg"
        android:textSize="12sp"
        android:hint="@string/edit_hit_old_pwd"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/txt_color"
        android:textSize="12sp"
        android:text="@string/input_new_pwd"
        />

    <com.heiman.widget.edittext.PasswordEditText
        android:id="@+id/edit_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:inputType="textPassword"
        android:background="@drawable/common_input_bg"
        android:textSize="12sp"
        android:hint="@string/edit_hit_new_pwd"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/txt_color"
        android:textSize="12sp"
        android:text="@string/input_new_pwd_next_time"
        />
    <com.heiman.widget.edittext.PasswordEditText
        android:id="@+id/edit_new_pwd_next_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:inputType="textPassword"
        android:background="@drawable/common_input_bg"
        android:textSize="12sp"
        android:hint="@string/edit_hit_new_pwd"/>
    <Button
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_secondary_bg"
        android:textSize="12sp"
        android:textColor="@color/txt_color"
        android:gravity="center"
        android:text="@string/btn_complete"/>
</LinearLayout>