<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/class_A_10_trans">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/navigation_bar_parting_line_color"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_icon"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/txt_check_app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/right"
        android:textColor="@color/txt_color"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textSize="12sp"
        android:text="@string/txt_check_app_version"
        android:clickable="true"/>

    <TextView
        android:id="@+id/txt_use_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/right"
        android:background="@color/white"
        android:textColor="@color/txt_color"
        android:layout_marginTop="1dp"
        android:padding="10dp"
        android:textSize="12sp"
        android:text="@string/txt_use_policy"
        android:clickable="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:textSize="10sp"
            android:text="@string/txt_copyright"/>
        <TextView
            android:id="@+id/txt_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/txt_copyright"
            android:layout_marginBottom="10dp"
            android:textSize="10sp"
            android:text="@string/txt_app_version"
            />
    </RelativeLayout>
</LinearLayout>
