<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:background="@drawable/exit_account_dialog_bg">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:textColor="@color/txt_color"
            android:gravity="center"
            android:text="@string/txt_gender_select"
            />
        <RadioGroup
            android:id="@+id/rgp_gender_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/rbtn_male"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:button="@null"
                android:textSize="12sp"
                android:textColor="@color/txt_color"
                android:text="@string/txt_gender_male"
                android:drawableRight="@drawable/common_check_icon"
                android:checked="true"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/navigation_bar_parting_line_color"/>
            <RadioButton
                android:id="@+id/rbtn_female"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:button="@null"
                android:textSize="12sp"
                android:textColor="@color/txt_color"
                android:text="@string/txt_gender_female"
                android:drawableRight="@drawable/common_check_icon"
                />

        </RadioGroup>
    </LinearLayout>

</LinearLayout>
